Adding delete support and README.md